<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hch.hooney.tourtogether.SettingActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:background="@drawable/toplayout_shadow"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <ImageButton
            android:id="@+id/setting_back_btn"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_chevron_left"
            android:background="@color/alpha"
            android:layout_width="48dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/search_activity_title_field_textview"
            android:textStyle="bold"
            android:textColor="@color/MainColor"
            android:textSize="15sp"
            android:text="@string/setting_title"
            android:paddingLeft="15dp"
            android:gravity="left|center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <LinearLayout
            android:paddingRight="15dp"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:text="Version : "
                android:textStyle="bold"
                android:textColor="@color/MainColor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:gravity="center"
                android:id="@+id/setting_version"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:text="1.0.0"
                android:textColor="@color/MainColor"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/grey_200"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:padding="15dp"
            android:gravity="center"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="9dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/setting_push"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/setting_push"
                android:paddingRight="50dp"
                android:paddingLeft="50dp"
                android:textOn="On"
                android:textOff="Off"
                android:checked="true"
                android:theme="@style/MySwitch"
                android:switchMinWidth="100dp"
                android:switchPadding="20dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="9dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/setting_notice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/basic_white"
                android:text="@string/setting_notice"
                android:visibility="visible" />
            <Button
                android:visibility="gone"
                android:layout_marginBottom="1dp"
                android:id="@+id/setting_event"
                android:text="@string/setting_event"
                android:background="@drawable/basic_white"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/setting_translate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/basic_white"
                android:text="@string/setting_translate"
                android:visibility="visible" />

            <Button
                android:id="@+id/setting_translate_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/basic_white"
                android:text="@string/setting_translate_list"
                android:visibility="visible" />

            <Button
                android:id="@+id/setting_convert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:background="@drawable/basic_white"
                android:text="@string/setting_Converter"
                android:visibility="visible" />

            <Button
                android:layout_marginBottom="1dp"
                android:id="@+id/setting_qa"
                android:text="@string/setting_qa"
                android:background="@drawable/basic_white"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <Button
                android:layout_marginBottom="1dp"
                android:id="@+id/setting_logout"
                android:text="@string/setting_logout"
                android:background="@drawable/basic_white"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
