<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hch.hooney.tourtogether.PostMapActivity">
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:background="@drawable/toplayout_shadow"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <ImageButton
            android:id="@+id/post_map_back_btn"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_chevron_left"
            android:background="@color/alpha"
            android:layout_width="48dp"
            android:layout_height="match_parent" />
        <EditText
            android:singleLine="true"
            android:maxLines="1"
            android:hint="@string/location_hint"
            android:id="@+id/post_map_edittext"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:background="@drawable/edittext_background_2"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <ImageButton
            android:id="@+id/post_map_search_btn"
            android:src="@drawable/ic_search_white"
            android:background="@drawable/basic_btn"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <fragment
            android:layout_weight="1"
            android:id="@+id/post_map_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <TableLayout
            android:layout_weight="4.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TableRow
                android:minHeight="80dp"
                android:layout_weight="1">
                <Button
                    android:id="@+id/post_map_field_tab1"
                    android:text="@string/search_tab1"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/grey_400"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:minHeight="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/post_map_field_tab2"
                    android:text="@string/search_tab2"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/grey_400"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:minHeight="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/post_map_field_tab3"
                    android:text="@string/search_tab3"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/grey_400"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:minHeight="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </TableRow>
            <TableRow
                android:minHeight="80dp"
                android:layout_weight="1" >
                <Button
                    android:id="@+id/post_map_field_tab4"
                    android:text="@string/search_tab4"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/grey_400"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:minHeight="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                   android:id="@+id/post_map_field_tab5"
                    android:text="@string/search_tab5"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/grey_400"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <Button
                    android:id="@+id/post_map_field_tab6"
                    android:text="@string/search_tab6"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/grey_400"
                    android:layout_margin="1dp"
                    android:background="@color/white"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>
